2014-07-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	* rcsc/formation/formation_dt.cpp:
	* rcsc/formation/formation_dt.h:
	- フォーメーション設定ファイルのフォーマットバージョンを更新．バー
	ジョン３以降は各プレイヤがマーク行動を取るかどうかを指定する情報を
	追加．現在はFormationDTのみ対応．

2014-04-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_kick_to_relative.cpp:
	* rcsc/action/body_stop_dash.h:
	* rcsc/coach/coach_world_state.h:
	* rcsc/formation/formation_cdt.cpp:
	* rcsc/player/action_effector.cpp:
	* rcsc/player/player_command.h:
	* rcsc/player/self_intercept_simulator.cpp:
	* rcsc/player/view_grid_map.cpp:
	* rcsc/player/world_model.cpp:
	* rcsc/rcg/serializer_v5.cpp:
	- コンパイラの警告に対応

2013-06-28  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- バージョン文字列を更新．RoboCup2013 Round1

2013-06-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 位置差分によるボール速度更新を視覚情報のみに限定

	* configure.ac:
	- バージョン文字列を更新．RoboCup2013 Round0

2013-06-26  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/geom/delaunay_triangulation.cpp:
	- 頂点数が不足している場合のエラーメッセージ出力を削除

2013-06-25  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- バージョン文字列をRoboCup2013用に更新

2013-06-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 位置差分によるボール速度更新を修正．hearによる共有情報よりもsee
	による観測情報を優先して用いるように変更

	* rcsc/action/body_hold_ball2008.cpp:
	- ホールドボールの評価関数を修正．敵の体の向きとなるべくずれる位置
	を優先するように変更

	* rcsc/player/ball_object.cpp:
	- visible_distance近くの距離の場合に認識できたとみなしてしまう問題に対応

	* rcsc/action/body_hold_ball2008.cpp:
	- ホールドボールの評価関数を修正．敵がキッカブルになる状態に対して
	は大きめのペナルティを与えるように変更
	- ログレベルをHOLDへ変更．デバッグ用マクロの整理

2013-06-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- キッカー判定の改善．現在サイクルでキック行動を観測できていないが
	ボール速度の変化が観測できた場合，前サイクルでキッカブル状態のプレ
	イヤを観測できていればその情報に基づいてキッカーを推定するように修正

	* rcsc/player/world_model.cpp:
	- オフサイドラインの更新で次にボールトラップされると予測される位置
	を用いるように変更
